--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "scripts": {
-    "dev": "webpack --config webpack.config.js "
+    "dev": "cross-env NODE_ENV=development webpack --config webpack.config.js --progress --colors"
   },
   "private": true,
   "devDependencies": {
+    "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "cross-env": "^5.0.5",
     "css-loader": "^0.28.5",
+    "cssnano": "^3.10.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "html-loader": "^0.5.1",
     "node-sass": "^4.5.3",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.6",
     "resolve-url-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
@@ -22,6 +27,8 @@
     "axios": "^0.16.2",
     "bootstrap-sass": "^3.0.0",
     "datatables": "^1.10.13",
+    "datatables.net": "^1.10.15",
+    "datatables.net-bs": "^1.10.15",
     "jquery": "^3.2.1",
     "vue": "^2.4.2",
     "vue-axios": "^2.0.2"
