--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack --config webpack.config.js --progress --colors"
+    "dev": "cross-env NODE_ENV=development webpack --config webpack.config.js --progress --colors --watch",
+    "dever": "npm run dev --display-error-details"
   },
   "private": true,
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-require-ignore": "^0.1.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.5",
     "cssnano": "^3.10.0",
@@ -25,8 +33,8 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "babel-runtime": "^6.26.0",
     "bootstrap-sass": "^3.0.0",
-    "datatables": "^1.10.13",
     "datatables.net": "^1.10.15",
     "datatables.net-bs": "^1.10.15",
     "jquery": "^3.2.1",
